Use ValueSource for git-aware line ending resolution to fix configuration cache
The default GIT_ATTRIBUTES_FAST_ALLSAME line ending policy reads ~/.gitconfig
via JGit during configuration. Gradle's configuration cache fingerprints this
read, so when CI workers inject per-build auth tokens into ~/.gitconfig, the
cache is invalidated every build.

Wrap the git config resolution in a Gradle ValueSource. File reads inside
ValueSource.obtain() are not tracked as configuration cache inputs; only the
returned value is fingerprinted. This means ~/.gitconfig changes that do not
affect the resolved line ending (e.g. auth tokens) no longer invalidate the
cache.